add GetClientLicenses api
