# rock-platform/rock/docs/swagger.json
@@ -1777,6 +1777,56 @@
                 }
             }
         },
+        "/v1/clusters/{id}/license-clics": {
+            "get": {
+                "description": "api for get client licenses",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CLUSTER"
+                ],
+                "summary": "Get client licenses",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cluster ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "StatusOK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.ClientLicResp"
+                        }
+                    },
+                    "400": {
+                        "description": "StatusBadRequest",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "StatusNotFound",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "StatusInternalServerError",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/clusters/{id}/license-fingerprint": {
             "get": {
                 "description": "api for download license hardware fingerprint file",
@@ -5718,6 +5768,17 @@
                 "version": {
                     "type": "string",
                     "example": "5.7.28-master-54b0c26"
+                }
+            }
+        },
+        "v1.ClientLicResp": {
+            "type": "object",
+            "properties": {
+                "licenses": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
